# -*- coding: utf-8 -*-
[metadata]
name = tbbrdet_api
summary = API for Thermal Bridges on Building Rooftops Detection
description-file =
    README.md
author = Fahimeh
author-email = f.alibabaee@gmail.com
version = 0.0.1
license = MIT
home-page = https://github.com/falibabaei/tbbrdet_api
classifier =
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6

[files]
packages =
    tbbrdet_api

[entry_points]
deepaas.v2.model =
    tbbrdet_api = tbbrdet_api.api
